2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Improve z80 rotation.
	* src/mcs51/ralloc.c:
	  Work around a mcs51 register saving issue (codegen cannot handle a return value in a bit if other bits are live at the call).

2023-06-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/MakeList:
	  Disable trigraph test for host, since many host compilers no longer support trigraphs.

2023-06-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/ports/host/spec.mk.in:
	  Fix C99 flag handling.
	* support/regression/tests/align.c.in:
	  Fix test for current state of SDCC and host compilers wrt. C11 alignment support.

2023-06-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c:
	  Fix type of result in optimization of shifts wider than operand.
	* src/z80/gen.c:
	  Fix left-shift for wide _BitInt.
	* src/hc08/gen.c:
	  Fix shift issues.
	* src/pdk/gen.c:
	  Fix 16-bit bitwise or for register operand with global operand. Fix a in left shift by 8 code generation that overwrote a live pseudoregister p when storing the shift result onto the stack.
	* src/stm8/gen.c:
	  Fix stack balance issue in left shift code generation.
	* support/regression/tests/bitintrot.c.in:
	  _BitInt rotation test.

2023-06-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/main.c,
	  src/z80/gen.c:
	  Improve z80 rotations.
	* src/pdk/main.c,
	  src/pdk/gen.c,
	  src/pdk/peeph.def:
	  Improve pdk rotations.
	* src/mcs51/main.c,
	  src/mcs51/gen.c:
	  Improve mcs51 rotations.
	* src/hc08/main.c,
	  src/hc08/gen.c:
	  Improve hc08 rotations.

2023-06-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c,
	  src/SDCCsymt.c:
	  Simplify ROT optimization.
	* src/stm8/gen.c,
	  src/stm8/main.c:
	  Improve stm8 rotations.

2023-05-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pdk/main.c,
	  src/pdk/gen.c:
	  Support arbitrary rotations of 8-bit values in pdk code generation.